--- a/ext/fetch/Cargo.toml
+++ b/ext/fetch/Cargo.toml
@@ -19,9 +19,9 @@ data-url.workspace = true
 deno_core.workspace = true
 deno_tls.workspace = true
 dyn-clone = "1"
-http_v02.workspace = true
+http.workspace = true
 pin-project.workspace = true
-reqwest.workspace = true
+reqwest = { workspace = true, features = ["http2"] }
 serde.workspace = true
 serde_json.workspace = true
 tokio.workspace = true
