feat: Bump rustls to 0.22.3

--- a/ext/tls/Cargo.toml
+++ b/ext/tls/Cargo.toml
@@ -17,7 +17,7 @@ path = "lib.rs"
 deno_core.workspace = true
 deno_native_certs = "0.2.0"
 once_cell.workspace = true
-rustls = { workspace = true, features = ["dangerous_configuration"] }
+rustls = { workspace = true }
 rustls-pemfile.workspace = true
 rustls-tokio-stream.workspace = true
 rustls-webpki.workspace = true
