--- a/ext/crypto/Cargo.toml
+++ b/ext/crypto/Cargo.toml
@@ -40,6 +40,7 @@ sha1 = { version = "0.10.6", features = ["oid"] }
 sha2.workspace = true
 signature.workspace = true
 spki.workspace = true
+tracing = "0.1"
 tokio.workspace = true
 uuid.workspace = true
 x25519-dalek = "2.0.0"
